# WTFCode

./: AGENTS.md  CHANGELOG.md  README.md  __init__.py  dekstop.py  desktop.md  example.env  main.py  pyproject.toml  requirements.txt  theme_manager.py  tui.py  web.py  ya_config.py
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: pylint.yml
