[project]
name = "wtfcode"
version = "0.1.0"
description = "WTFcode: Auto Code Edit | Agent Mode | Ask Mode | Auto Bash, powered by LLMs, Amazing code - without 0 dollars in your provider."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai",
    "anthropic",
    "google-genai",
    "rich",
    "python-dotenv",
    "requests",
    "win11toast>=0.36.3",
    "pygetwindow>=0.0.9",
    "streamlit",
    "pyyaml>=6.0.3",
    "customtkinter>=5.2.2",
    "Pillow",
]
[project.scripts]
wtfcode = "main:start_cli"
WTFcode = "main:start_cli"
WTFdesktop = "main:start_desktop"
[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
[tool.setuptools.packages.find]
where = ["."]
[tool.setuptools]
py-modules = ["main"]
